--- a/index.html
+++ b/index.html
@@ -1,15 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signature</title>
     <style>
-        .canvas{
+        .main {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .canvas {
             border: 2px solid black;
         }
+
+        .top {
+            display: flex;
+            flex-direction: row;
+            margin: 20px 0px 20px 0px;
+            justify-content: space-around;
+        }
+
+        .bottom {
+            display: flex;
+            flex-direction: row;
+            margin: 20px 0px 20px 0px;
+            justify-content: space-around;
+        }
+
+        .top-left {
+            width: 50%;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .top-right {
+            width: 50%;
+            justify-content: center;
+            text-align: center;
+        }
+
+        input,
+        select,
+        button {
+            width: 50%;
+        }
+
+        .middle {
+            text-align: center;
+        }
+        
+        .btn-success{
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
     </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="main">
         <div class="top">
@@ -38,7 +91,8 @@
             <button type="button" class="btn btn-success" id="saveButton">Save Signature</button>
             <button type="button" class="btn btn-warning" id="retrieveButton">Retrieve Previous Signature</button>
         </div>
-    
+
     </div>
 </body>
+
 </html>
