--- a/index.html
+++ b/index.html
@@ -93,6 +93,71 @@
         </div>
 
     </div>
+
+    <script>
+        const colorPicker = document.getElementById("textColorPicker");
+        const fontSize = document.getElementById("textThickness");
+        const canvas = document.getElementById("myCanvas");
+        const clearButton = document.getElementById("clearButton");
+        const saveButton = document.getElementById("saveButton");
+        const retrieveButton = document.getElementById("retrieveButton");
+
+        const ctx = canvas.getContext("2d");
+
+        colorPicker.addEventListener('change',(e)=>{
+            ctx.strokeStyle = e.target.value;
+            ctx.fillStyle = e.target.value;
+        })
+
+        canvas.addEventListener('mousedown',(e)=>{
+            isDrawing = true;
+            lastX = e.offsetX;
+            lastY = e.offsetY;
+        })
+
+        canvas.addEventListener('mousemove',(e)=>{
+            if(isDrawing){
+                ctx.beginPath();
+                ctx.moveTo(lastX,lastY);
+                ctx.lineTo(e.offsetX,e.offsetY);
+                ctx.stroke();
+
+                lastX = e.offsetX;
+                lastY = e.offsetY;
+            }
+        })
+
+        canvas.addEventListener('mouseup',(e)=>{
+            isDrawing = false;
+        })
+
+        fontSize.addEventListener('change',(e)=>{
+            ctx.lineWidth = e.target.value;
+        })
+
+        clearButton.addEventListener('click',(e)=>{
+            ctx.clearRect(0,0, canvas.width, canvas.height);
+        })
+
+        saveButton.addEventListener('click',(e)=>{
+            localStorage.setItem('canvasContents',canvas.toDataURL());
+
+            let link = document.createElement('a');
+            link.download = 'my-sign.png';
+            link.href = canvas.toDataURL();
+            link.click();
+        })
+
+        retrieveButton.addEventListener('click',(e)=>{
+            let savedCanvas = localStorage.getItem('canvasContents');
+
+            if(savedCanvas){
+                let img = new Image();
+                img.src = savedCanvas;
+                ctx.drawImage(img, 0, 0);
+            }
+        })
+    </script>
 </body>
 
 </html>
